# django-blog

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
blog/: apps.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options.py
blog/templates/blog/: base.html  home.html  post_detail.html  user_posts.html
django_blog/: settings.py  urls.py  wsgi.py
django_blog/django_blog/: settings.py  urls.py
users/: apps.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html
