[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "pet-project to learn django"
authors = ["dimmy2000"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
django-environ = "^0.4.5"
django-crispy-forms = "^1.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
dotenv-linter = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
